--- a/WaterBar.Core/appsettings.json
+++ b/WaterBar.Core/appsettings.json
@@ -11,7 +11,11 @@
       {
         "Target": "Network",
         "Select": "enp34s0",
-        "Format": "\uDB81\uDD52 %up_speed, \uDB80\uDDDA %down_speed %speed"
+        "Format": "\uDB81\uDD52 up_speed, \uDB80\uDDDA down_speed \uDB81\uDCC5 bandwidth"
+      },
+      {
+        "Target": "Datetime",
+        "Format": "\uDB82\uDD54 yyyy-mm-dd HH:MM:ss"
       }
     ]
   }
