fix: Fix wrong up/down, update format method

--- a/WaterBar.Core/appsettings.json
+++ b/WaterBar.Core/appsettings.json
@@ -10,12 +10,21 @@
     "Display": [
       {
         "Target": "Network",
+        "Select": "wlp38s0",
+        "Format": "Wifi: \uDB81\uDD52 up_speed, \uDB80\uDDDA down_speed"
+      },
+      {
+        "Target": "Network",
         "Select": "enp34s0",
-        "Format": "\uDB81\uDD52 up_speed, \uDB80\uDDDA down_speed  \uDB81\uDCC5 bandwidth"
+        "Format": "Eth: \uDB81\uDD52 up_speed, \uDB80\uDDDA down_speed  \uDB81\uDCC5 bandwidth"
       },
       {
         "Target": "Datetime",
         "Format": "\uDB82\uDD54 yyyy-MM-dd HH:mm:ss"
+      },
+      {
+        "Target": "Processor",
+        "Format": "total_usage"
       }
     ]
   }
