--- a/WaterBar.Core/WaterBar.Core.csproj
+++ b/WaterBar.Core/WaterBar.Core.csproj
@@ -9,5 +9,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+        <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0" />
     </ItemGroup>
 </Project>
