feat: support Caps Lock status

--- a/WaterBar.Core/appsettings.json
+++ b/WaterBar.Core/appsettings.json
@@ -9,6 +9,10 @@
     "Interval": 1,
     "Display": [
       {
+        "Target": "Keyboard",
+        "Format": "\udb82\ude9b caps_lock"
+      },
+      {
         "Target": "Network",
         "Select": "wlp38s0",
         "Format": "Wifi: \uDB81\uDD52 up_speed, \uDB80\uDDDA down_speed"
@@ -24,7 +28,8 @@
       },
       {
         "Target": "Processor",
-        "Format": "total_usage"
+        "Format": "total_usage",
+        "Color": "blue"
       }
     ]
   }
